style: chat-list 세부화